--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
   "author": "Vinoth Kumar",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
