--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,9 @@
   "license": "ISC",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^6.8.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
     "ws": "^8.12.0"
